# ngram-diversity

./: README.md  pyproject.toml
src/ngram_diversity/: cli.py  core.py
